refactor(server): standardize database schema with numeric auto-increment keys
- every table now starts with id bigint(20) unsigned auto_increment plus
  gmt_create/gmt_modified as the fixed 2nd/3rd columns; drop varchar UUID
  primary keys and created_at/updated_at
- rename rmq_topic to rmq_instance_topic, rmq_group to rmq_instance_group,
  rmq_message_query to rmq_instance_message, rmq_trace_query to rmq_instance_trace
- switch entities, repositories, services, VOs and DTOs from String to Long ids
  and remove all UUID generation; move the ACL default-permission marker from
  id suffixes to resource_pattern, resolve the settings singleton by first row,
  keep ds_key as the data source business key, and add InstanceIds/EntityIds
  helpers bridging String API parameters to numeric ids